<resources>
    <string name="app_name">MyFirstAndroidApp_Geine</string>
    <string name="hello_my_first_app">Hello My First App</string>
    <string name="Hello">반갑습니다</string>
    <string name="makeProject">앱만들기 프로젝트</string>
    <string name="id">아이디</string>
    <string name="editEmail">이메일 양식으로 입력</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="editPassword">8글자이상 입력</string>
    <string name="editNickname">한 줄로 입력</string>
    <string name="commit">확인</string>
    <string name="agree">이용약관 동의</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="no">공개안함</string>
    <string name="todo">TODO</string>
    <string name="cancel">취소</string>
    <string name="login">로그인</string>
    <string name="signup_prompt">회원가입 하시겠습니까?</string>
    <string name="addressName">행정구역</string>
    <string name="floor">층수</string>

</resources>